# TechChallengeChurnPrediction

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: deploy_architecture.md  ml_canvas.md  model_card.md  monitoring_plan.md
models/: mlp_churn.pt  preprocessor.joblib
notebooks/: 01_eda_baseline.ipynb  02_modeling.ipynb
src/: api.py  data_acquisition.py  data_loader.py  feature_engineering.py  model.py  schemas.py  training.py
src/utils/: logger.py
tests/: conftest.py  test_api.py  test_data_loader.py  test_model.py  test_schema.py  test_training.py
