[tool.poetry]
name = "tech-challenge-churn-prediction"
version = "0.1.0"
description = "API de previsão de Churn usando Rede Neural (MLP) com PyTorch, MLflow e FastAPI"
authors = ["Marco"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0"
scikit-learn = "^1.3"
pandas = "^2.0"
numpy = "^1.24"
fastapi = "^0.110"
uvicorn = "^0.29"
mlflow = "^2.10"
seaborn = "^0.13"
matplotlib = "^3.8"
kagglehub = ">=0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
flake8 = "^7.0"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
